--- a/ProjectManagement/src/main/resources/templates/error.html
+++ b/ProjectManagement/src/main/resources/templates/error.html
@@ -4,7 +4,8 @@
     <title>Error</title>
 </head>
 <body>
-    <h2>Error</h2>
-    <p>Something went wrong. Please try again later.</p>
+    <h2>Error </h2>
+    <p th:text="${firebaseTest}"></p>
+    <p>Something went wrong. Please try again later...</p>
 </body>
 </html>
