--- a/ProjectManagement/src/main/resources/templates/login.html
+++ b/ProjectManagement/src/main/resources/templates/login.html
@@ -12,6 +12,7 @@
         <form action="/login" method="post">
             <div class="form-group">
                 <label for="username">Enter your username:</label>
+                <p th:text="${firebaseTest}"></p>
                 <input type="text" id="username" name="username" required>
             </div>
             <div class="form-group">
