Update student name input fields to first name and last name

--- a/ProjectManagement/src/main/resources/templates/homestaff.html
+++ b/ProjectManagement/src/main/resources/templates/homestaff.html
@@ -193,8 +193,12 @@
                                 <input type="password" class="form-control" id="password" required>
                             </div>
                             <div class="mb-3">
-                                <label for="studentName" class="form-label">Student Name</label>
-                                <input type="text" class="form-control" id="studentName" required>
+                                <label for="firstName" class="form-label">First Name</label>
+                                <input type="text" class="form-control" id="firstName" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="lasttName" class="form-label">Last Name</label>
+                                <input type="text" class="form-control" id="lastName" required>
                             </div>
                         </form>
                     </div>
