--- a/ProjectManagement/src/main/resources/templates/importuserfile.html
+++ b/ProjectManagement/src/main/resources/templates/importuserfile.html
@@ -39,7 +39,7 @@
         }
 
         #content {
-            margin-left: 250px;
+      
             padding: 50px;
         }
 
@@ -84,17 +84,63 @@
 <body>
 
     <!-- เมนูบาร์ด้านซ้าย -->
-    <div id="sidebar">
-        <a href="#">Profile</a>
-        <a href="#">User</a>
-        <a href="#">Subject</a>
-        <a href="#">Create New Subject</a>
-        <a href="#">Create New User</a>
-        <a href="#">Log Out</a>
-    </div>
-
-    <!-- เนื้อหาหลัก -->
-    <div  id="content">
+    <div class="row">
+    <div class="d-flex flex-column flex-shrink-0 p-3 bg-light col-3" style="width: 280px; height: 100vh;">
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+          <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+          <span class="fs-4">Staff</span>
+        </a>
+        <hr>
+        <ul class="nav nav-pills flex-column mb-auto">
+          <li class="nav-item">
+            <a href="#" class="nav-link active" aria-current="page">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-add" viewBox="0 0 16 16">
+                    <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0m-2-6a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4"/>
+                    <path d="M8.256 14a4.5 4.5 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10q.39 0 .74.025c.226-.341.496-.65.804-.918Q8.844 9.002 8 9c-5 0-6 3-6 4s1 1 1 1z"/>
+                  </svg>
+              User
+            </a>
+          </li>
+          <li>
+            <a href="#" class="nav-link link-dark">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-book-fill" viewBox="0 0 16 16">
+  <path d="M8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783"/>
+</svg>
+              Subject
+            </a>
+          </li>
+          <li>
+            <a href="#" class="nav-link link-dark">
+                <img src="https://cdn3.iconfinder.com/data/icons/interaction-design/512/Import_B-512.png" alt=""width="16" height="16" >
+              Create New Subject
+            </a>
+          </li>
+          <li>
+            <a href="#" class="nav-link link-dark">
+              <img src="https://cdn3.iconfinder.com/data/icons/interaction-design/512/Import_B-512.png" alt=""width="16" height="16" >
+              Create New User
+            </a>
+            <li>
+                <a href="#" class="nav-link link-dark">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0z"/>
+                        <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z"/>
+                      </svg>
+                    Log Out
+                </a>
+            </li>
+            
+        </ul>
+        <hr>
+        <div class="dropdown">
+          <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle" >
+            <img src="https://cdn-icons-png.flaticon.com/512/3884/3884871.png" alt="" width="40" height="40" class="rounded-circle me-2">
+            <strong>นางสาวสมมติ อิอิ</strong>
+          </a>
+        </div>
+      </div>
+      <!-- เนื้อหาหลัก -->
+    <div  id="content" class="col-9">
         <div class="box">
             <div class="row">
                 <div class="col">
@@ -116,6 +162,8 @@
             </div>
         </div>
     </div>
+    </div>
+    
 
     <script>
         function handleDrop(event) {
