--- a/ProjectManagement/src/main/resources/templates/homestaff.html
+++ b/ProjectManagement/src/main/resources/templates/homestaff.html
@@ -155,7 +155,7 @@
                 <li><a href="#">Subject</a></li>
                 <li><a href="#">Create New Subject</a></li>
                 <li><a href="#">Create New Account</a></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
     </div>
