--- a/ProjectManagement/src/main/resources/templates/homestaff.html
+++ b/ProjectManagement/src/main/resources/templates/homestaff.html
@@ -165,9 +165,9 @@
                 <h2 class="display-4">All Users</h2>
             </div>
             <div class="search">
-                <input type="text" class="form-control" placeholder="Username" id="searchUsername">
-                <input type="text" class="form-control" placeholder="Name" id="searchName">
-                <button class="btn btn-primary" onclick="searchUsers()">Search</button>
+                <input type="text" class="form-control" placeholder="Student ID">
+                <input type="text" class="form-control" placeholder="Name">
+                <button class="btn btn-primary">Search</button>
             </div>
         </div>
         <div class="add-user">
@@ -286,9 +286,7 @@
         </table>
     </div>
     <script>
-        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-foaAXmNpqNfQSSJoKFttV/gIz9BtCBEUv0QFpmIa2fs1aGOWGrPrJd9Pmy6bqm" crossorigin="anonymous">
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-    function addUserToFirestore() {
+        function addUserToFirestore() {
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
             const firstName = document.getElementById('firstName').value;
@@ -324,45 +322,6 @@
                     console.error('Error:', error);
                 });
         }
-        function searchUsers() {
-        const username = document.getElementById('searchUsername').value;
-        const name = document.getElementById('searchName').value;
-
-        // ส่ง request ค้นหาไปที่ server
-        fetch('/searchUsers?username=' + username + '&name=' + name)
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    // อัพเดทตารางผู้ใช้
-                    updateTable(data.users);
-                } else {
-                    alert('Error searching users: ' + data.message);
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-            });
-    }
-
-    function updateTable(users) {
-        // อัพเดทตารางผู้ใช้
-        const tableBody = document.querySelector('.user-table tbody');
-        tableBody.innerHTML = '';
-
-        users.forEach(user => {
-            const row = document.createElement('tr');
-            row.innerHTML = `
-                <td>${user['username']}</td>
-                <td>${user['firstName']}</td>
-                <td>${user['lastName']}</td>
-                <td>
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#resetPasswordModal">Reset Password</button>
-                    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteUserModal">Delete</button>
-                </td>
-            `;
-            tableBody.appendChild(row);
-        });
-    }
     </script>
 
     
