--- a/ProjectManagement/src/main/resources/templates/homestaff.html
+++ b/ProjectManagement/src/main/resources/templates/homestaff.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sunflower:wght@500&display=swap" rel="stylesheet">
+    <script src="jquery-3.7.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <title>homestaff</title>
     <style>
@@ -258,7 +260,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn btn-danger" onclick="deleteUserInFirestore()">Delete</button>
+                        <button type="button" id="modal_btn_del" class="btn btn-danger" onclick="deleteUserInFirestore()">Delete</button>
                     </div>
                 </div>
             </div>
@@ -276,31 +278,56 @@
                 </tr>
             </thead>
             <tbody class="bg-white">
-                <tr th:each="user : ${users}">
-                    <!-- Use correct attribute names from "useraccount" collection -->
-                    <td th:text="${user['username']}"></td>
-                    <td th:text="${user['firstName']}"></td>
-                    <td th:text="${user['lastName']}"></td>
-                    <td>
-                        <button type="button" class="btn btn-primary"
-                                data-bs-toggle="modal"
-                                data-bs-target="#resetPasswordModal"
-                                onclick="setUsernameForResetPasswordModal(`${user['username']}`)">
-                            Reset Password
-                        </button>
-                        <button type="button" class="btn btn-danger"
-                                data-bs-toggle="modal"
-                                data-bs-target="#deleteUserModal"
-                                onclick="setUsernameForDeleteUserModal(`${user['username']}`)">
-                            Delete
-                        </button>
-                    </td>
-                </tr>
+            <tr th:each="user : ${users}">
+                <td th:text="${user['username']}"></td>
+                <td th:text="${user['firstName']}"></td>
+                <td th:text="${user['lastName']}"></td>
+                <td>
+                    <button type="button" class="btn btn-primary"
+                            data-bs-toggle="modal"
+                            data-bs-target="#resetPasswordModal"
+                            onclick="setUsernameForResetPasswordModal(`${user['username']}`)">
+                        Reset Password
+                    </button>
+                    <button type="button" class="btn btn-danger"
+                            data-bs-toggle="modal"
+                            data-bs-target="#deleteUserModal"
+                            onclick="setUsernameForDeleteUserModal(this)">
+                        Delete
+                    </button>
+                </td>
+            </tr>
                 <!-- Add more rows here -->
             </tbody>
         </table>
     </div>
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        function deleteUser(username) {
+            fetch('/deleteUser', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ username: username }),
+            })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.success) {
+                        alert('User deleted successfully');
+                        location.reload();
+                    } else {
+                        alert('Error deleting user: ' + data.message);
+                    }
+                })
+                .catch((error) => {
+                    console.error('Error:', error);
+                });
+        }
+        /*]]>*/
+    </script>
     <script>
+
         function addUserToFirestore() {
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
@@ -380,9 +407,13 @@
             document.getElementById('resetPasswordUsername').value = username;
         }
 
-        function setUsernameForDeleteUserModal(username) {
-            document.getElementById('deleteUserModalLabel').innerText = `Delete User - ${username}`;
-            document.getElementById('deleteUserUsername').value = username;
+        function setUsernameForDeleteUserModal(element) {
+            $(element).parent().each(function () {
+                const username = $(this).siblings().first().text();
+                console.log("username");
+                document.getElementById('deleteUserModalLabel').innerText = `Delete User - ${username}`;
+                $('#modal_btn_del').attr('onclick', `deleteUser('${username}')`);
+            });
         }
 
     </script>
