--- a/ProjectManagement/src/main/resources/templates/homestaff.html
+++ b/ProjectManagement/src/main/resources/templates/homestaff.html
@@ -147,7 +147,7 @@
     <div class="d-flex flex-column flex-shrink-0 p-3 bg-light col-3" style="width: 280px; height: 100vh;">
         <div class="sidebar">
             <div class="profile">
-                <a href="#" class="d-flex align-items-center link-dark text-decoration-none ">
+                <a href="#" class="d-flex align-items-center active text-decoration-none ">
                     <img src="https://cdn-icons-png.flaticon.com/512/3884/3884871.png" alt="" width="40" height="40"
                         class="rounded-circle me-2">
                     <strong> STAFF <br> <div th:text="${firstName} + ' ' + ${lastName}"> </div></strong>
@@ -157,7 +157,7 @@
         <hr>
         <ul class="nav nav-pills flex-column mb-auto">
             <li class="nav-item">
-                <a href="homestaff" class="nav-link link-dark" aria-current="page">
+                <a href="/homestaff" class="nav-link link-dark" aria-current="page">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-person-add" viewBox="0 0 16 16">
                         <path
@@ -169,7 +169,7 @@
                 </a>
             </li>
             <li>
-                <a href="/createsubject" class="nav-link active">
+                <a href="/createsubject" class="nav-link link-dark">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-book-fill" viewBox="0 0 16 16">
                         <path
