--- a/ProjectManagement/src/main/resources/templates/importuserfile.html
+++ b/ProjectManagement/src/main/resources/templates/importuserfile.html
@@ -102,7 +102,7 @@
             <hr>
             <ul class="nav nav-pills flex-column mb-auto">
                 <li class="nav-item">
-                    <a href="createsubject" class="nav-link link-dark" aria-current="page">
+                    <a href="/homestaff" class="nav-link link-dark" aria-current="page">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-person-add" viewBox="0 0 16 16">
                             <path
