--- a/ProjectManagement/src/main/resources/templates/createsubject.html
+++ b/ProjectManagement/src/main/resources/templates/createsubject.html
@@ -87,7 +87,7 @@
         <div class="d-flex flex-column flex-shrink-0 p-3 bg-light col-3" style="width: 280px; height: 100vh;">
             <div class="sidebar">
                 <div class="profile">
-                    <a href="homestaff class="d-flex align-items-center link-dark text-decoration-none ">
+                    <a href="homestaff" class="d-flex align-items-center link-dark text-decoration-none ">
                         <img src="https://cdn-icons-png.flaticon.com/512/3884/3884871.png" alt="" width="40" height="40"
                             class="rounded-circle me-2">
                         <strong> STAFF <br> <div th:text="${firstName} + ' ' + ${lastName}"> </div></strong>
@@ -180,9 +180,9 @@
                         <tbody class="bg-white">
                             <tr th:each="user : ${users}">
                                 <!-- Use correct attribute names from "useraccount" collection -->
-                                <td th:text="${user['username']}"></td>
-                                <td th:text="${user['firstName']}"></td>
-                                <td th:text="${user['lastName']}"></td>
+                                <td th:text="${user['subjectID']}"></td>
+                                <td th:text="${user['subjectName']}"></td>
+                           
                                 <td>
                                     <button type="button" class="btn btn-danger"
                                             data-bs-toggle="modal"
