--- a/ProjectManagement/src/main/resources/templates/homestaff.html
+++ b/ProjectManagement/src/main/resources/templates/homestaff.html
@@ -149,7 +149,7 @@
     <div class="d-flex flex-column flex-shrink-0 p-3 bg-light col-3" style="width: 280px; height: 100vh;">
         <div class="sidebar">
             <div class="profile">
-                <a href="#" class="d-flex align-items-center active text-decoration-none ">
+                <a href="#" class="d-flex align-items-center link-dark text-decoration-none ">
                     <img src="https://cdn-icons-png.flaticon.com/512/3884/3884871.png" alt="" width="40" height="40"
                         class="rounded-circle me-2">
                     <strong> STAFF <br> <div th:text="${firstName} + ' ' + ${lastName}"> </div></strong>
