--- a/ProjectManagement/src/main/resources/templates/createsubject.html
+++ b/ProjectManagement/src/main/resources/templates/createsubject.html
@@ -90,7 +90,7 @@
                     <a href="homestaff" class="d-flex align-items-center link-dark text-decoration-none ">
                         <img src="https://cdn-icons-png.flaticon.com/512/3884/3884871.png" alt="" width="40" height="40"
                             class="rounded-circle me-2">
-                        <strong> STAFF <br> <div th:text="${firstName} + ' ' + ${lastName}"> </div></strong>
+                            <strong> STAFF <br> <div th:text="${firstname} + ' ' + ${lastname}"> </div></strong>
                     </a>
                 </div>
             </div>
