--- a/ProjectManagement/src/main/resources/templates/createsubject.html
+++ b/ProjectManagement/src/main/resources/templates/createsubject.html
@@ -188,21 +188,17 @@
                                             <div class="modal-body">
                                                 <div class="mb-3">
                                                     <label for="subjectID" class="form-label">Subject ID</label>
-                                                    <input type="text" class="form-control" id="subjectID"
-                                                        placeholder="Enter subject ID">
+                                                    <input type="text" class="form-control" id="subjectID" name="subjectID" placeholder="Enter subject ID">
                                                 </div>
                                                 <div class="mb-3">
                                                     <label for="subjectName" class="form-label">Subject Name</label>
-                                                    <input type="text" class="form-control" id="subjectName"
-                                                        placeholder="Enter subject name">
+                                                    <input type="text" class="form-control" id="subjectName" name="subjectName" placeholder="Enter subject name">
                                                 </div>
                                                 <div class="modal-footer">
-                                                    <button type="button" class="btn btn-secondary"
-                                                        data-bs-dismiss="modal">Close</button>
+                                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                                                     <button type="submit" class="btn btn-primary">Save</button>
                                                 </div>
-                                                <!-- Add subject form -->
-
+                                            </div>
                                         </form>
                                     </div>
 
