--- a/ProjectManagement/src/main/resources/templates/createsubject.html
+++ b/ProjectManagement/src/main/resources/templates/createsubject.html
@@ -188,14 +188,17 @@
                                             <div class="modal-body">
                                                 <div class="mb-3">
                                                     <label for="subjectID" class="form-label">Subject ID</label>
-                                                    <input type="text" class="form-control" id="subjectID" name="subjectID" placeholder="Enter subject ID">
+                                                    <input type="text" class="form-control" id="subjectID"
+                                                        name="subjectID" placeholder="Enter subject ID">
                                                 </div>
                                                 <div class="mb-3">
                                                     <label for="subjectName" class="form-label">Subject Name</label>
-                                                    <input type="text" class="form-control" id="subjectName" name="subjectName" placeholder="Enter subject name">
+                                                    <input type="text" class="form-control" id="subjectName"
+                                                        name="subjectName" placeholder="Enter subject name">
                                                 </div>
                                                 <div class="modal-footer">
-                                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                                    <button type="button" class="btn btn-secondary"
+                                                        data-bs-dismiss="modal">Close</button>
                                                     <button type="submit" class="btn btn-primary">Save</button>
                                                 </div>
                                             </div>
@@ -204,6 +207,25 @@
 
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade" id="deleteSubjectModal" tabindex="-1" aria-labelledby="deleteUserModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="deleteUserModalLabel">Delete Subject</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Are you sure you want to delete this subject?</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                            <button type="button" id="modal_btn_del" class="btn btn-danger"
+                               >Delete</button>
                         </div>
                     </div>
                 </div>
@@ -228,8 +250,7 @@
 
                             <td>
                                 <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-                                    data-bs-target="#deleteUserModal"
-                                    onclick="setUsernameForDeleteUserModal(`${user['username']}`)">
+                                    data-bs-target="#deleteSubjectModal" onclick="setUsernameForDeleteUserModal(this)">
                                     Delete
                                 </button>
                             </td>
@@ -241,8 +262,44 @@
         </div>
     </div>
     </div>
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        function deleteSubject(username) {
+            fetch('/deleteSubject', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ username: username }),
+            })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.success) {
+                        alert('User deleted successfully');
+                        location.reload();
+                    } else {
+                        alert('Error deleting user: ' + data.message);
+                    }
+                })
+                .catch((error) => {
+                    console.error('Error:', error);
+                });
+        }
+        /*]]>*/
+    </script>
 
+    <script>
+        function setUsernameForDeleteUserModal(element) {
+            $(element).parent().each(function () {
+                const username = $(this).siblings().first().text();
+                console.log("username");
+                document.getElementById('deleteUserModalLabel').innerText = `Delete Subject - ${username}`;
+                $('#modal_btn_del').attr('onclick', `deleteSubject('${username}')`);
+            });
+        }
+    </script>
 
 </body>
+
 
 </html>
